# clrs

./: .gitignore  Cargo.toml
HelloWorld/: HelloWorld.csproj
assets/: HelloWorld.il
clrs-compiler/: Cargo.toml
clrs-compiler/src/: lib.rs
clrs-derive/: Cargo.toml
clrs-derive/src/: lib.rs
clrs-macro/: Cargo.toml
clrs-macro/src/: lib.rs
clrs-pe/: Cargo.toml
clrs-pe/src/: cil.rs  lib.rs  pe.rs  utils.rs
clrs-pe/src/cil/: opcode.rs
clrs-pe/src/pe/: raw.rs
clrs-pe/src/pe/raw/: indices.rs  signatures.rs  tables.rs
corlib/: mscorlib.csproj
corlib/System/: Attribute.cs  Console.cs  Object.cs  String.cs  ValueType.cs  Void.cs
corlib/System/Reflection/: AssemblyAttribute.cs
corlib/System/Runtime/Versioning/: TargetFrameworkAttribute.cs
examples/: compile.rs  pe.rs
src/: cil.rs  pe.rs
src/cil/: opcode.rs
src/pe/: raw.rs
src/pe/raw/: indices.rs  tables.rs
