[package]
name = "clrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clrs-derive = { path = "./clrs-derive" }
bitflags = "1.3.2"
goblin = { version = "0.4.3", default-features = false, features = ["std", "pe32"] }
scroll = "0.10.2"

[workspace]
members = [".", "clrs-derive"]
