[package]
name = "clrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clrs-pe = { path = "./clrs-pe" }
clrs-compiler = { path = "./clrs-compiler" }

[dev-dependencies]
goblin = "0.4.3"
scroll = "0.10.2"
wasmprinter = "0.2.29"

[workspace]
members = [".", "clrs-derive", "clrs-pe", "clrs-compiler"]
